--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,7 @@ project(":desktop") {
         compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         compile "io.github.libktx:ktx-app:$ktxVersion"
         compile "io.github.libktx:ktx-ashley:$ktxVersion"
+        compile "io.github.libktx:ktx-assets:$ktxVersion"
         compile "io.github.libktx:ktx-box2d:$ktxVersion"
         compile "io.github.libktx:ktx-collections:$ktxVersion"
         compile "io.github.libktx:ktx-graphics:$ktxVersion"
@@ -74,6 +75,7 @@ project(":core") {
         compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
         compile "io.github.libktx:ktx-app:$ktxVersion"
         compile "io.github.libktx:ktx-ashley:$ktxVersion"
+        compile "io.github.libktx:ktx-assets:$ktxVersion"
         compile "io.github.libktx:ktx-box2d:$ktxVersion"
         compile "io.github.libktx:ktx-collections:$ktxVersion"
         compile "io.github.libktx:ktx-graphics:$ktxVersion"
